added banner and profile pic

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "my-github-page",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://philrechani.github.io/my-github-pages-react-app",
+  "homepage": "https://philrechani.github.io/home",
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
